upd css effects

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,21 @@
         </div>
     </div>
 
+    <div class="task-wrapper">
+        <div class="task">
+            <span class="shortDescr">11111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111</span>
+        </div>
+        <div class="date">
+            <div class="status">Status: opened</div>
+            <span class="opened">Opened: 01.01.2022</span>
+            <span class="estimate">Estimate: 05.01.2022</span>
+        </div>
+        <div class="buttons">
+            <div class="button edit"></div>
+            <div class="button delete"></div>
+        </div>
+    </div>
+
 
 </div>
 </body>
