--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,23 @@
         </div>
     </div>
 
+    <dialog id="edit-window" open="">
+        <h3>Изменить тикет</h3>
+        <label class="window-descr-short">
+            <h4>Краткое описание</h4>
+            <textarea class="task-short-content"> </textarea>
+        </label>
+
+        <label>
+            <h4>Полное описание</h4>
+            <textarea class="task-content"> </textarea>
+        </label>
+
+        <p></p>
+        <button id="confirm-task-changes">Add</button>
+        <button id="exit">Cancel</button>
+    </dialog>
+
 
 </div>
 </body>
