upd modal window

--- a/src/index.html
+++ b/src/index.html
@@ -49,8 +49,11 @@
         </label>
 
         <p></p>
-        <button id="confirm-task-changes">Add</button>
-        <button id="exit">Cancel</button>
+        <div class="modal-buttons">
+            <button id="confirm-task-changes">Применить</button>
+            <button id="exit">Отмена</button>
+        </div>
+
     </dialog>
 
 
