upd modal window

--- a/src/index.html
+++ b/src/index.html
@@ -36,14 +36,14 @@
         </div>
     </div>
 
-    <dialog id="edit-window" open="">
+    <dialog class="hidden" id="edit-window" open="" >
         <h3>Изменить тикет</h3>
         <label class="window-descr-short">
             <h4>Краткое описание</h4>
             <textarea class="task-short-content"> </textarea>
         </label>
 
-        <label>
+        <label class="window-descr-long">
             <h4>Полное описание</h4>
             <textarea class="task-content"> </textarea>
         </label>
