--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,8 @@
         <label class="window-descr-short">
             <div class="shortDescr-status-wrapper">
                 <h4>Краткое описание</h4>
-                Текущий статус:<div class="status-dd dropdown">
+                Текущий статус:
+                <div class="status-dd dropdown">
                     <span></span>
                     <div class="dropdown-content">
                         <p>Новое</p>
