upd get status pics from url

--- a/src/index.html
+++ b/src/index.html
@@ -70,8 +70,14 @@
                     <div class="status-pic"></div>
                 </div>
                 <div class="date-section">
-                    <span>Начало: </span> <input class="input-start-at" type="date">
-                    <span>Заверш: </span> <input class="input-estimate" type="date">
+                    <span>Начало: </span>
+                    <label>
+                        <input class="input-start-at" type="date">
+                    </label>
+                    <span>Заверш: </span>
+                    <label>
+                        <input class="input-estimate" type="date">
+                    </label>
                 </div>
             </div>
         </div>
