--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,7 @@
                         <div class="status-info">
 
                             <span>Текущий статус: </span>
-                            <div class="status-dd dropdown">
-                            </div>
+                            <div class="status-dd dropdown"></div>
                             <span></span>
                             <div class="dropdown-content">
                                 <p>Новое</p>
